2005-02-05  Roland Illig  <roland.illig@gmx.de>

	* util.h (msglen): Converted from a function to a procedure.
	* util.c (msglen): Changed variable names and did a speedup.
	* hotlist.c (add_new_entry_input): Using new msglen function.
	* hotlist.c (add_new_group_input): Likewise.
	* wtools.c (query_dialog): Likewise.
	* wtools.c (fg_input_dialog_help): Likewise.

2005-02-02  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* find.c: Implement non-recursive 'Find file' feature.
	Original patch by Andrew Borodin <aborodin@vmail.ru> .

	* utilunix.c (mc_realpath) [USE_SYSTEM_REALPATH]: Use realpath().

2005-02-01  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* utilunix.c (init_groups): Use glib memory allocation functions.

2005-01-31  Roland Illig  <roland.illig@gmx.de>

	* view.c: Eliminated two global variables and put them into the
	WView structure.

2005-01-29  Miguel de Icaza  <miguel@novell.com>

	* utilunix.c (init_groups) [HAVE_GETGROUPLIST]: Use getgrouplist().
	Original patch by Stefan Gohmann <gohmann@univention.de>

2005-01-17  Roland Illig  <roland.illig@gmx.de>

	* info.c (info_show_info): Enabled display of the device number,
	for the case that the column in the directory listing is too
	short. This had been disabled since 1994, for no obvious reason
	and without any comment.
	* screen.c (format_device_number): Added. Converts a device number
	into a bounded string.
	* screen.c (string_file_size): Support for larger device numbers
	(and for non-Linux systems).

2005-01-26  Roland Illig  <roland.illig@gmx.de>

	* tty.h (printwstr): Added a function to print a string
	left-aligned in a bounded box.
	* unixcompat.h (major/minor): Added support for AIX.
	* unixcompat.h: Added makedev macro.

2005-01-25  Roland Illig  <roland.illig@gmx.de>

	* unixcompat.h: Provides macros and functions that are missing in
	some Unix variants.
	* Makefile.am: Added unixcompat.h.

2005-01-25  Roland Illig  <roland.illig@gmx.de>
